--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         <div class="main-content">
             <!-- Image Section -->
             <div class="image-section">
-                <div class="image-container">
+                <div class="vagaslimitadas.png">
                     <!-- A imagem vagaslimitadas.png seria colocada aqui -->
                 </div>
             </div>
